--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "portfolio-rawierdt",
-  "author": "Alejandro Aguilar",
+  "author": "Rawier",
   "license": "MIT",
   "description": "Portafolio for Rawierdt",
   "private": false,
