--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-icons": "^4.4.0",
-    "react-player": "^2.10.1"
+    "react-markdown": "^9.0.1",
+    "react-player": "^2.10.1",
+    "remark-gfm": "^4.0.0"
   },
   "devDependencies": {
     "@types/marked": "^4.0.7",
