--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-markdown": "^9.0.1",
+    "react-scroll": "^1.9.0",
     "react-syntax-highlighter": "^15.5.0",
+    "rehype-slug": "^6.0.0",
     "remark-gfm": "^4.0.0"
   },
   "devDependencies": {
@@ -40,6 +42,7 @@
     "@types/react": "18.0.9",
     "@types/react-copy-to-clipboard": "^5.0.7",
     "@types/react-dom": "18.0.5",
+    "@types/react-scroll": "^1.8.10",
     "@types/react-syntax-highlighter": "^15.5.11",
     "autoprefixer": "^10.4.7",
     "postcss": "^8.4.14",
