--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "react-scroll": "^1.9.0",
     "react-syntax-highlighter": "^15.5.0",
     "rehype-slug": "^6.0.0",
-    "remark-gfm": "^4.0.0"
+    "remark-gfm": "^4.0.0",
+    "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
     "@types/marked": "^4.0.7",
