--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "portfolio-rawierdt",
-  "author": "Rawier",
+  "name": "portfolio-aiskoa",
+  "author": "AISKOA",
   "license": "MIT",
   "description": "Portafolio for Rawierdt",
   "private": false,
@@ -17,6 +17,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@headlessui/react": "^1.6.6",
     "@material-tailwind/react": "^1.2.4",
+    "@vercel/speed-insights": "^1.2.0",
     "framer-motion": "^10.12.16",
     "gray-matter": "^4.0.3",
     "marked": "^15.0.0",
