--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@headlessui/react": "^1.6.6",
     "@material-tailwind/react": "^1.2.4",
+    "@tailwindcss/forms": "^0.5.10",
+    "@tailwindcss/typography": "^0.5.16",
     "@vercel/speed-insights": "^1.2.0",
     "framer-motion": "^10.12.16",
     "gray-matter": "^4.0.3",
