--- a/package.json
+++ b/package.json
@@ -35,8 +35,10 @@
     "react-markdown": "^9.0.1",
     "react-scroll": "^1.9.0",
     "react-syntax-highlighter": "^15.5.0",
+    "rehype-katex": "^7.0.1",
     "rehype-slug": "^6.0.0",
     "remark-gfm": "^4.0.0",
+    "remark-math": "^6.0.0",
     "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
