--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-markdown": "^9.0.1",
+    "react-medium-image-zoom": "^5.2.14",
     "react-scroll": "^1.9.0",
     "react-syntax-highlighter": "^15.5.0",
     "rehype-katex": "^7.0.1",
