--- a/package.json
+++ b/package.json
@@ -16,10 +16,11 @@
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@headlessui/react": "^1.6.6",
-    "@material-tailwind/react": "^1.2.4",
+    "@material-tailwind/react": "^1.4.2",
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/typography": "^0.5.16",
     "@vercel/speed-insights": "^1.2.0",
+    "devicon": "^2.16.0",
     "framer-motion": "^10.12.16",
     "gray-matter": "^4.0.3",
     "marked": "^15.0.0",
